@@ -338,7 +338,8 @@ Release 0.20.0 - Unreleased
    HBASE-1809  NPE thrown in BoundedRangeFileInputStream
    HBASE-1810  ConcurrentModificationException in region assignment
                (Mathias Herberts via Stack)
-   HBASE-1804 Puts are permitted (and stored) when including an appended colon
+   HBASE-1804  Puts are permitted (and stored) when including an appended colon
+   HBASE-1715  Compaction failure in ScanWildcardColumnTracker.checkColumn
 
   IMPROVEMENTS
    HBASE-1089  Add count of regions on filesystem to master UI; add percentage
